--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Odin Recipes</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes (some Japanese recipes)</h1>
 
-    <a href="recipes/misosoup.html">Miso Soup</a>
-    <a href="recipes/katsudon.html">Katsudon</a>
-    <a href="recipes/onigiri.html">Onigiri</a>
+  <nav class="navbar">
+    <ul>
+      <li><a class="active" href="#">Homepage</a></li>
+      <li><a href="recipes/misosoup.html">Miso Soup</a></li>
+      <li><a href="recipes/katsudon.html">Katsudon</a></li>
+      <li><a href="recipes/onigiri.html">Onigiri</a></li>
+    </ul>
+  </nav>
+
+  <div class="left-div">
+    <h1 id="topleft-header">Odin Recipes</h1>
+  </div>
+
 </body>
 </html>
