--- a/recipes/onigiri.html
+++ b/recipes/onigiri.html
@@ -7,29 +7,32 @@
   <title>Onigiri Recipe</title>
 </head>
 <body>
-  <h1>Onigiri</h1>
 
-  <img width="300px" src="../images/onigiri.JPG" alt="Onigiri">
+  <div class="left-div">
+    <h1>Onigiri</h1>
+
+    <img width="300px" src="../images/onigiri.JPG" alt="Onigiri">
   
-  <h2>Description</h2>
-  <p>
-    Onigiri are Japanese rice balls. They're fun to make and are a staple of Japanese lunchboxes (bento). 
-    You can put almost anything in an onigiri; try substituting grilled salmon, pickled plums, beef, pork, turkey, 
-    or tuna with mayonnaise.
-  </p>
+    <h2>Description</h2>
+    <p>
+      Onigiri are Japanese rice balls. They're fun to make and are a staple of Japanese lunchboxes (bento). 
+      You can put almost anything in an onigiri; try substituting grilled salmon, pickled plums, beef, pork, turkey, 
+      or tuna with mayonnaise.
+    </p>
 
-  <h2>Ingredients</h2>
-  <ul>
-    <li>4 cups uncooked short-grain white rice</li>
-    <li>4 1/2 cups water</li>
-    <li>1 cup water</li>
-    <li>1/4 teaspoon salt</li>
-    <li>1/4 cup bonito shavings (dry fish flakes)</li>
-    <li>2 sheets nori (dry seaweed), cut into 1/2-inch strips</li>
-    <li>2 tablespoons sesame seeds</li>
-  </ul>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>4 cups uncooked short-grain white rice</li>
+      <li>4 1/2 cups water</li>
+      <li>1 cup water</li>
+      <li>1/4 teaspoon salt</li>
+      <li>1/4 cup bonito shavings (dry fish flakes)</li>
+      <li>2 sheets nori (dry seaweed), cut into 1/2-inch strips</li>
+      <li>2 tablespoons sesame seeds</li>
+    </ul>
 
-  <a href="../index.html">Return to Homepage</a>
+    <a href="../index.html">Return to Homepage</a>
+  </div>
   
 </body>
 </html>
