copied index.html structure to all pages

--- a/recipes/onigiri.html
+++ b/recipes/onigiri.html
@@ -5,8 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Onigiri Recipe</title>
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+
+  <nav class="navbar">
+    <ul>
+      <li><a href="#">Homepage</a></li>
+      <li><a href="recipes/misosoup.html">Miso Soup</a></li>
+      <li><a href="recipes/katsudon.html">Katsudon</a></li>
+      <li><a class="active" href="recipes/onigiri.html">Onigiri</a></li>
+    </ul>
+  </nav>
 
   <div class="left-div">
     <h1>Onigiri</h1>
