--- a/recipes/misosoup.html
+++ b/recipes/misosoup.html
@@ -5,38 +5,51 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Miso Soup Recipe</title>
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <h1>Miso Soup</h1>
 
-  <img width="300px" src="../images/miso-soup.jpeg" alt="Miso Soup">
+  <nav class="navbar">
+    <ul>
+      <li><a href="#">Homepage</a></li>
+      <li><a class="active" href="recipes/misosoup.html">Miso Soup</a></li>
+      <li><a href="recipes/katsudon.html">Katsudon</a></li>
+      <li><a href="recipes/onigiri.html">Onigiri</a></li>
+    </ul>
+  </nav>
 
-  <h2>Description</h2>
-  <p>
-    Dashi is a basic stock used in Japanese cooking which is made by boiling dried kelp (seaweed) and dried bonito (fish). 
-    Instant dashi granules are sold in conveniently-sized jars or packets and vary in strength. Add more dashi to your soup 
-    if you want a stronger stock. You can use yellow, white or red miso paste for this soup. Yellow miso is sweet and creamy, 
-    red miso is stronger and saltier.
-  </p>
+  <div class="left-div">
+    <h1>Miso Soup</h1>
+
+    <img width="300px" src="../images/miso-soup.jpeg" alt="Miso Soup">
+
+    <h2>Description</h2>
+    <p>
+      Dashi is a basic stock used in Japanese cooking which is made by boiling dried kelp (seaweed) and dried bonito (fish). 
+      Instant dashi granules are sold in conveniently-sized jars or packets and vary in strength. Add more dashi to your soup 
+      if you want a stronger stock. You can use yellow, white or red miso paste for this soup. Yellow miso is sweet and creamy, 
+      red miso is stronger and saltier.
+    </p>
   
-  <h2>Ingredients</h2>
-  <ul>
-    <li>2 teaspoons dashi granules</li>
-    <li>4 cups water</li>
-    <li>3 tablespoons miso paste</li>
-    <li>1 (8 ounce) package silken tofu, diced</li>
-    <li>2 green onions, sliced diagonally into 1/2 inch pieces</li>
-  </ul>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>2 teaspoons dashi granules</li>
+      <li>4 cups water</li>
+      <li>3 tablespoons miso paste</li>
+      <li>1 (8 ounce) package silken tofu, diced</li>
+      <li>2 green onions, sliced diagonally into 1/2 inch pieces</li>
+    </ul>
 
-  <h2>Steps</h2>
-  <ol>
-    <li>In a medium saucepan over medium-high heat, combine dashi granules and water; bring to a boil.</li>
-    <li>Reduce heat to medium,and whisk in the miso paste.</li>
-    <li>Stir in tofu. Separate the layers of the green onions, and add them to the soup. </li>
-    <li>Simmer gently for 2 to 3 minutes before serving.</li>
-  </ol>
+    <h2>Steps</h2>
+    <ol>
+      <li>In a medium saucepan over medium-high heat, combine dashi granules and water; bring to a boil.</li>
+      <li>Reduce heat to medium,and whisk in the miso paste.</li>
+      <li>Stir in tofu. Separate the layers of the green onions, and add them to the soup. </li>
+      <li>Simmer gently for 2 to 3 minutes before serving.</li>
+    </ol>
 
-  <a href="../index.html">Return to Homepage</a>
+    <a href="../index.html">Return to Homepage</a>
+  </div>
 
 </body>
 </html>
