added text to homepage, fixed all navbar functionality and positions

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Odin Recipes</title>
+  <title>Japanese Cuisine Recipes</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,7 +19,44 @@
   </nav>
 
   <div class="left-div">
-    <h1 id="topleft-header">Odin Recipes</h1>
+    <h1 id="topleft-header">Japanese Cuisine Recipes</h1>
+
+    <p>
+      Japanese cuisine encompasses the regional and traditional 
+      foods of Japan, which have developed through centuries of 
+      political, economic, and social changes. The traditional 
+      cuisine of Japan (Japanese: washoku) is based on rice with 
+      miso soup and other dishes; there is an emphasis on seasonal 
+      ingredients. Side dishes often consist of fish, pickled 
+      vegetables, and vegetables cooked in broth. Seafood is 
+      common, often grilled, but also served raw as sashimi or in 
+      sushi. Seafood and vegetables are also deep-fried in a light 
+      batter, as tempura. Apart from rice, a staple includes 
+      noodles, such as soba and udon. Japan also has many simmered 
+      dishes such as fish products in broth called oden, or beef in 
+      sukiyaki and nikujaga.
+    </p>
+
+    <p>
+      Historically influenced by Chinese cuisine, Japanese cuisine 
+      has also opened up to influence from Western cuisines in the 
+      modern era. Dishes inspired by foreign food—in particular 
+      Chinese food—like ramen and gyōza, as well as foods like 
+      spaghetti, curry, and hamburgers, have been adapted to 
+      Japanese tastes and ingredients. Traditionally, the Japanese 
+      shunned meat because of Buddhism, but with the modernization 
+      of Japan in the 1880s, meat-based dishes such as tonkatsu and 
+      yakiniku have become common. Japanese cuisine, particularly 
+      sushi and ramen, has become popular throughout the world. 
+    </p>
+
+    <p>
+      In 2011, Japan overtook France to become the country with the 
+      most 3-starred Michelin restaurants; as of 2018, the capital 
+      Tokyo has maintained the title of the city with the most 
+      3-starred restaurants in the world. In 2013, Japanese cuisine 
+      was added to the UNESCO Intangible Heritage List.
+    </p>
   </div>
 
 </body>
