--- a/recipes/misosoup.html
+++ b/recipes/misosoup.html
@@ -11,10 +11,10 @@
 
   <nav class="navbar">
     <ul>
-      <li><a href="#">Homepage</a></li>
-      <li><a class="active" href="recipes/misosoup.html">Miso Soup</a></li>
-      <li><a href="recipes/katsudon.html">Katsudon</a></li>
-      <li><a href="recipes/onigiri.html">Onigiri</a></li>
+      <li><a href="../index.html">Homepage</a></li>
+      <li><a class="active" href="./misosoup.html">Miso Soup</a></li>
+      <li><a href="./katsudon.html">Katsudon</a></li>
+      <li><a href="./onigiri.html">Onigiri</a></li>
     </ul>
   </nav>
 
